# se_solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: async_queue.h  processor.h  quadratic_equation.h  result_manager.h  task.h
src/: main.cpp  processor.cpp  quadratic_equation.cpp  result_manager.cpp  task.cpp
tests/: test.py  test_quadratic_solver.py
